* small fixes * UCI engine attempts